--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,15 @@
-<resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources xmlns:xiff="urn:oasis:names:tc:xliff:document:1.2">
 
     <string name="app_name" translatable="false">Karpardaz</string>
 
     <string name="app_name_display">Karpardaz</string>
 
+    <string name="main_profile_title">Profile</string>
+    <string name="main_report_title">Reports</string>
+
+    <string name="main_cash_title">Costs</string>
+    <string name="cost_sum_title_coloned">مجموعه هزینه های امروز:</string>
+    <string name="last_20_costs_title">۲۰ هزینه آخر</string>
+    <string name="profile_title">پروفایل و تنظیمات</string>
 </resources>
