--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,8 +44,11 @@
     <string name="all_email_or_password_is_empty">ایمیل یا گذرواژه خالی است.</string>
     <string name="entry_invalid_email_message">ایمیل اشتباه است. ایمیل باید در این قالب باشد: example@domain.com</string>
     <string name="long_invalid_password_message">گذرواژه باید بیش از 4 کاراکتر باشد.</string>
-    <string name="all_loading_message">در حال بارگذاری</string>
+    <string name="all_loading_message">لطفاً منتظر بمانید.</string>
     <string name="all_check_network_message">لطفاً دسترسی اینترنت خود را بررسی نموده، سپس دوباره تلاش نمایید.</string>
     <string name="all_check_value_message">مقادیر ورودی را بررسی، و دوباره امتحان نمایید.</string>
+    <string name="register_email_found_error_message">ایمیلی مشابه در سیستم ثبت شده است.</string>
+    <string name="all_invalid_user_information_message">ایمیل یا گذرواژه اشتباه است.</string>
+    <string name="recover_password_progress_message">در حال ارسال ایمیل بازستانی گذرواژه.</string>
 
 </resources>
